Fix scrollbar

--- a/sass/base.scss
+++ b/sass/base.scss
@@ -19,6 +19,7 @@ body {
 
 html, body {
   cursor: default;
+  overflow-x: hidden;
 }
 
 button {
